syntax = "proto3";
package schema.v2;

message TeamDeletionRequest {
  repeated ProjectDeletedData project_data = 1;
}

message ProjectDeletedData {
  int32 project_id = 1;
  repeated int32 project_generate_id = 2;
}
